@@ -10,6 +10,8 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
+import org.springframework.core.ParameterizedTypeReference;
+import org.springframework.http.HttpMethod;
 import org.springframework.stereotype.Component;
 import org.springframework.beans.factory.annotation.Value;
 import lombok.extern.slf4j.Slf4j;
@@ -32,11 +34,13 @@ public class RestEventStoreClient implements EventStoreClient {
     public List<EventDTO> fetchEvents(UUID sessionId) {
         String url = eventStoreBaseUrl + "/events/sessions/" + sessionId;
         try {
-            ResponseEntity<EventDTO[]> response = restTemplate.getForEntity(url, EventDTO[].class);
-            EventDTO[] body = response.getBody();
-            if (body == null)
-                return Collections.emptyList();
-            return new ArrayList<>(List.of(body));
+            ResponseEntity<List<EventDTO>> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    null,
+                    new ParameterizedTypeReference<List<EventDTO>>() {}
+            );
+            return response.getBody() != null ? response.getBody() : Collections.emptyList();
         } catch (HttpClientErrorException.NotFound e) {
             log.warn("Session {} not found in Event Store, falling back to mock data.", sessionId);
             return mockClient.fetchEvents(sessionId);
@@ -46,6 +50,26 @@ public class RestEventStoreClient implements EventStoreClient {
         } catch (Exception e) {
             log.error("Error fetching events for session {}, falling back to mock data.", sessionId, e);
             return mockClient.fetchEvents(sessionId);
+        }
+    }
+
+    @Override
+    public List<UUID> fetchSessionIds() {
+        String url = eventStoreBaseUrl + "/events/sessions";
+        try {
+            ResponseEntity<List<UUID>> response = restTemplate.exchange(
+                    url,
+                    HttpMethod.GET,
+                    null,
+                    new ParameterizedTypeReference<List<UUID>>() {}
+            );
+            return response.getBody() != null ? response.getBody() : Collections.emptyList();
+        } catch (ResourceAccessException e) {
+            log.warn("Event Store unavailable at {}, falling back to mock sessions.", eventStoreBaseUrl);
+            return mockClient.fetchSessionIds();
+        } catch (Exception e) {
+            log.error("Error fetching session list, falling back to mock data.", e);
+            return mockClient.fetchSessionIds();
         }
     }
 }
